Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-89001

event.getModifierState("CapsLock") does not work

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.15.4
    • 5.12.9, 5.15.2
    • WebEngine
    • None
    • 2dc642d3f97bf457d7cf57265a35eb8b1bd83a8d (qt/qtwebengine/5.15)

      When visiting https://www.w3schools.com/howto/howto_js_detect_capslock.asp and enabling capslock in the input field, the warning is shown as expected. When doing the same e.g. with simplebrowser, no such warning is shown.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            pvarga Peter Varga
            the compiler Florian Bruhin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes