Forward modifier flags for lock keys

Fixes: QTBUG-89001
Change-Id: I9f336313b075ad0cb3115975afc410beb415e4a0
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>